# YourDesk

./: LICENSE  README.md  pyproject.toml
docs/: high-level-design.md  low-level-implementation-plan.md  requirements.md  user-manual.md
packaging/arch/: PKGBUILD
packaging/debian/: control
packaging/rpm/: yourdesk.spec
packaging/systemd/: yourdesk-broker.service  yourdesk-host.service
scripts/: build-packages.sh
tests/: test_broker.py  test_cli.py
yourdesk/: broker.py  cli.py  config.py
